added jumbotron to contain my profile pic and short description

--- a/index.html
+++ b/index.html
@@ -36,27 +36,28 @@
 
   <main class="page-wrapper">
     <!-- intro  -->
-    <section class="intro">
-      <aside class="introAside">
-        <figure id = "profilePic">
-            <img class="mypic" src="./images/Adil_Profile_Pic.png" />
-            <figcaption class="myName"> 
-              <h2> Adil Seco </h2>
-            </figcaption>
-        </figure>
-      </aside>
 
-      <article id="introArticle">
-        <div id="introText">
-          <h2> Hello! </h2>
-          <h3> 
-            I am a professional web developer and  I create bespoke websites and mobile app prototypes based on end-to-end advanced UX processes to deliver the best experience for the users of your business! 
-          </h3>
-        </div>    
-      </article>
-      
-    </section>
+    <div class="jumbotron jumbotron-fluid">
+      <section class="intro">
+        <aside class="introAside">
+          <figure id = "profilePic">
+              <img class="mypic" src="./images/Adil_Profile_Pic.png" />
+              <figcaption class="myName"> 
+                <h2> Adil Seco </h2>
+              </figcaption>
+          </figure>
+        </aside>
 
+        <article id="introArticle">
+          <div id="introText">
+            <h2> Hello! </h2>
+            <h3> 
+              I am a professional web developer and  I create bespoke websites and mobile app prototypes based on end-to-end advanced UX processes to deliver the best experience for the users of your business! 
+            </h3>
+          </div>    
+        </article>
+      </section>
+    </div> 
 
     <!-- about me section -->
     <section class="page-section" id="aboutMeGrid">
