--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Adil - Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/style.css" />
@@ -38,25 +39,27 @@
     <!-- intro  -->
 
     <div class="jumbotron jumbotron-fluid">
-      <section class="intro">
-        <aside class="introAside">
-          <figure id = "profilePic">
-              <img class="mypic" src="./images/Adil_Profile_Pic.png" />
-              <figcaption class="myName"> 
-                <h2> Adil Seco </h2>
-              </figcaption>
-          </figure>
-        </aside>
+     <div class="container">
+        <section class="intro">
+          <aside class="introAside">
+            <figure id = "profilePic">
+                <img class="mypic" src="./images/Adil_Profile_Pic.png" />
+                <figcaption class="myName"> 
+                  <h2> Adil Seco </h2>
+                </figcaption>
+            </figure>
+          </aside>
 
-        <article id="introArticle">
-          <div id="introText">
-            <h2> Hello! </h2>
-            <h3> 
-              I am a professional web developer and  I create bespoke websites and mobile app prototypes based on end-to-end advanced UX processes to deliver the best experience for the users of your business! 
-            </h3>
-          </div>    
-        </article>
-      </section>
+          <article id="introArticle">
+            <div id="introText">
+              <h2> Hello! </h2>
+              <h3> 
+                I am a professional web developer and  I create bespoke websites and mobile app prototypes based on end-to-end advanced UX processes to deliver the best experience for the users of your business! 
+              </h3>
+            </div>    
+          </article>
+        </section>
+      </div>  
     </div> 
 
     <!-- about me section -->
