--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
               <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank">
                 <figcaption id="projectcaption">
                   <h2>Password Generator</h2>
-                  <br>
                   <p> CSS3 / Vanilla JS</p>
                 </figcaption>
               </a>
@@ -104,8 +103,8 @@
              <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1" target="_blank">
                 <figcaption id="projectcaption">
                   <h2> STUDEAT Food Ordering</h2>
-                  <br>
-                  <p> UX Prototype in Figma. App Coming Soon! </p>
+                  <p> UX Prototype in Figma</p> 
+                  <p>App Coming Soon! </p>
                 </figcaption>
               </a> 
             </figure>
@@ -115,9 +114,8 @@
             <figure>
               <figcaption id="projectcaption">
                 <h2> Flight Booking Site</h2>
-                <br>
-                <p>Coming Soon!</p>
                 <p> FIGMA / CSS3 / REACT JS / SQL / </p>
+                <p>Coming Soon!</p>
               </figcaption>
             </figure>
           </div>
@@ -126,9 +124,8 @@
             <figure>
               <figcaption id="projectcaption">
                 <h2> E-Commerce Site</h2>
-                <br>
-                <p>Coming Soon!</p>
                 <p> FIGMA / WORDPRESS / WOOCOMMERCE </p>
+                <p>Coming Soon!</p>
               </figcaption>
             </figure>
           </div>
@@ -137,7 +134,6 @@
             <figure>
               <figcaption id="projectcaption">
                 <h2> Bus Booking Website </h2>
-                <br>
                 <p> ADOBE XD / HTML5 / CSS3 / JS </p>
               </figcaption>
            </figure>
