added footer and styles footer in CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <title>Adil - Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Questrial">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="stylesheet" href="styles/responsivemedia.css"/>
@@ -92,7 +93,7 @@
               <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank">
                 <figcaption id="projectcaption">
                   <h2>Password Generator</h2>
-                  <p> CSS3 / Vanilla JS</p>
+                  <h5> CSS3 / Vanilla JS</h5>
                 </figcaption>
               </a>
             </figure>
@@ -103,8 +104,8 @@
              <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1" target="_blank">
                 <figcaption id="projectcaption">
                   <h2> STUDEAT Food Ordering</h2>
-                  <p> UX Prototype in Figma</p> 
-                  <p>App Coming Soon! </p>
+                  <h5> UX Prototype in Figma</h5> 
+                  <h5>App Coming Soon! </h5>
                 </figcaption>
               </a> 
             </figure>
@@ -114,8 +115,8 @@
             <figure>
               <figcaption id="projectcaption">
                 <h2> Flight Booking Site</h2>
-                <p> FIGMA / CSS3 / REACT JS / SQL / </p>
-                <p>Coming Soon!</p>
+                <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
+                <h5>Coming Soon!</h5>
               </figcaption>
             </figure>
           </div>
@@ -124,8 +125,8 @@
             <figure>
               <figcaption id="projectcaption">
                 <h2> E-Commerce Site</h2>
-                <p> FIGMA / WORDPRESS / WOOCOMMERCE </p>
-                <p>Coming Soon!</p>
+                <h5> FIGMA / WORDPRESS / WOOCOMMERCE </h5>
+                <h5>Coming Soon!</h5>
               </figcaption>
             </figure>
           </div>
@@ -134,7 +135,7 @@
             <figure>
               <figcaption id="projectcaption">
                 <h2> Bus Booking Website </h2>
-                <p> ADOBE XD / HTML5 / CSS3 / JS </p>
+                <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
               </figcaption>
            </figure>
           </div>
@@ -210,8 +211,8 @@
     </section>  
 
     <footer>
-      <h3>All rights reserved &copy;</h2>
-        <br>
+      <h3>All rights reserved &copy;</h3>
+      <br>
       <h4> Designed by ADIL SECO &REG;</h4>
     </footer>
   </main>
