Added xl,lg,m, and sm BS classes in HTML

--- a/index.html
+++ b/index.html
@@ -92,103 +92,244 @@
 
         <!--Grid container for the project images and caption-->
         <div id="projectsGrid">
-          <div class='card' class="projects" id="project1">
-            <div class="card-title">
-              <h2>Password Generator</h2>
-            </div>
+          <!--1st row of project/work -->
+          <div class="row">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
+              <div class='card' class="projects">
+                <div id="project1">
+                  <div class="card-title">
+                    <h2>Password Generator</h2>
+                  </div>
 
-            <div class="card-body">
-              <figure>
-                <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank"></a>
-            </div>
+                  <div class="card-body">
+                    <figure>
+                      <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank"></a>
+                  </div>
 
-            <div class="card-footer">
-              <figcaption id="projectcaption">
-                <h5> CSS3 / Vanilla JS</h5>
-              </figcaption>
-              </figure>
-
-            </div>
-
-            <div class='card' class="projects" id="project2">
-              <div class="card-title">
-                <h2> STUDEAT Food Ordering</h2>
-              </div>
-
-              <div class="card-body">
-                <figure>
-                  <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1"
-                    target="_blank">
-                  </a>
-                </figure>
-
-              </div>
-
-              <div class="card-footer">
-                <figcaption id="projectcaption">
-                  <h5> UX Prototype in Figma</h5>
-                  <h5>App Coming Soon! </h5>
-                </figcaption>
+                  <div class="card-footer">
+                    <figcaption id="projectcaption">
+                      <h5> CSS3 / Vanilla JS</h5>
+                    </figcaption>
+                    </figure>
+                  </div>
+                </div>
               </div>
             </div>
-
-            <div class='card' class="projects" id="project3">
-              <div class="card-title">
-                <h2> Flight Booking Site</h2>
-              </div>
-
-              <div class="card-body">
-                <figure>
-
-                </figure>
-              </div>
-
-              <div class="card-footer">
-                <figcaption id="projectcaption">
-                  <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
-                  <h5>Coming Soon!</h5>
-                </figcaption>
-              </div>
-            </div>
-
-            <div class="card" class="projects" id="project4">
-              <div class="card-title">
-                <h2> E-Commerce Site</h2>
-              </div>
-
-              <div class="card-body">
-                <figure>
-
-                </figure>
-              </div>
-              <div class="card-footer">
-                <figcaption id="projectcaption">
-                  <h5> FIGMA / WORDPRESS / WOOCOMMERCE </h5>
-                  <h5>Coming Soon!</h5>
-                </figcaption>
-              </div>
-            </div>
-
-            <div class="card" class="projects" id="project5">
-              <div class="card-title">
-                <h2> Bus Booking Website </h2>
-              </div>
-
-              <div class="card-body">
-                <figure>
-
-                </figure>
-              </div>
-
-              <div class="card-footer">
-                <figcaption id="projectcaption">
-                  <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
-                </figcaption>
-              </div>
-            </div>
-
           </div>
+
+          <!--2nd row of grid/projects-->
+          <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+              <div class='card' class="projects">
+                <div id="project2">
+                  <div class="card-title">
+                    <h2> STUDEAT - Food for Students</h2>
+                  </div>
+
+                  <div class="card-body">
+                    <figure>
+                      <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1"
+                        target="_blank">
+                      </a>
+                    </figure>
+                  </div>
+
+                  <div class="card-footer">
+                    <figcaption id="projectcaption">
+                      <h5> UX Prototype in Figma</h5>
+                      <h5>App Coming Soon! </h5>
+                    </figcaption>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+              <div class='card' class="projects" id="project3">
+                <div class="card-title">
+                  <h2> Flight Booking Site</h2>
+                </div>
+
+                <div class="card-body">
+                  <figure>
+
+                  </figure>
+                </div>
+
+                <div class="card-footer">
+                  <figcaption id="projectcaption">
+                    <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
+                    <h5>Coming Soon!</h5>
+                  </figcaption>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!--3rd row for projects/work-->
+          <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+              <div class="card" class="projects" id="project4">
+                <div class="card-title">
+                  <h2> E-Commerce Site</h2>
+                </div>
+
+                <div class="card-body">
+                  <figure>
+                  </figure>
+                </div>
+
+                <div class="card-footer">
+                  <figcaption id="projectcaption">
+                    <h5> FIGMA / WORDPRESS / WOOCOMMERCE </h5>
+                    <h5>Coming Soon!</h5>
+                  </figcaption>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+              <div class="card" class="projects" id="project5">
+                <div class="card-title">
+                  <h2> Bus Booking Website </h2>
+                </div>
+
+                <div class="card-body">
+                  <figure>
+
+                  </figure>
+                </div>
+
+                <div class="card-footer">
+                  <figcaption id="projectcaption">
+                    <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
+                  </figcaption>
+                </div>
+              </div>
+            </div>
+          </div> <!--3rd row of grid closes here-->
+        </div> <!--projects grid class ends here-->
       </article>
+    </section>
+   
+    <section class="page-section" id="skillsGrid">
+      <aside id="asideSkills" class="asideBorder">
+        <h2> Skills </h2>
+      </aside>
+
+      <article class="articleSkills">
+        <div id="skill1">
+          <a href="tel:+447765401734">
+            <figure class="skillsIcons">
+              <i class="fa fa-phone fa-3x" aria-hidden="true"></i>
+              <figcaption class="skillsCaption">
+                <h3> Wireframing </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill2">
+          <a href="mailto:adil@mycompany.com">
+            <figure class="skillsIcons">
+              <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+              <figcaption class="skillsCaption">
+                <h3> Prototyping </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill3">
+          <a href="https://www.linkedin.com/in/adilseco2/" target="_blank">
+            <figure class="skillsIcons">
+              <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+              <figcaption class="skillsCaption">
+                <h3> UX Design </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill4">
+          <a href="https://github.com/adil7-a7" target="_blank">
+            <figure class="skillsIcons">
+              <i class="fa fa-github fa-3x" aria-hidden="true"> </i>
+              <figcaption class="skillsCaption">
+                <h3> Figma</h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill5">
+          <a href="https://github.com/adil7-a7" target="_blank">
+            <figure class="SkillIcons">
+              <i class="fa fa-github fa-3x" aria-hidden="true"> </i>
+              <figcaption class="skillsCaption">
+                <h3> HTML5 </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill6">
+          <a href="https://github.com/adil7-a7" target="_blank">
+            <figure class="SkillIcons">
+              <i class="fa fa-github fa-3x" aria-hidden="true"> </i>
+              <figcaption class="skillsCaption">
+                <h3> CSS3 </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill7">
+          <a href="https://github.com/adil7-a7" target="_blank">
+            <figure class="SkillIcons">
+              <i class="fa fa-github fa-3x" aria-hidden="true"> </i>
+              <figcaption class="skillsCaption">
+                <h3> Bootstrap </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill8">
+          <a href="https://github.com/adil7-a7" target="_blank">
+            <figure class="SkillIcons">
+              <i class="fa fa-github fa-3x" aria-hidden="true"> </i>
+              <figcaption class="skillsCaption">
+                <h3> JavaScript </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div id="skill9">
+          <a href="https://github.com/adil7-a7" target="_blank">
+            <figure class="SkillIcons">
+              <i class="fa fa-github fa-3x" aria-hidden="true"> </i>
+              <figcaption class="skillsCaption">
+                <h3> jQuery </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        
+        <div id="skill10">
+          <a href="https://github.com/adil7-a7" target="_blank">
+            <figure class="SkillIcons">
+              <i class="fa fa-github fa-3x" aria-hidden="true"> </i>
+              <figcaption class="skillsCaption">
+                <h3> API </h3>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </article>
+
+
     </section>
 
     <!-- contact me -->
