added script for font awesome icon in HTML5

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Questrial">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/style.css" />
-  <link rel="stylesheet" href="styles/responsivemedia.css" />
 
 
 </head>
@@ -455,6 +453,7 @@
       <h4> Designed by ADIL SECO &REG;</h4>
     </footer>
   </main>
+  <script src="https://kit.fontawesome.com/38c20b2da6.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
