added BS button for footer

--- a/index.html
+++ b/index.html
@@ -430,13 +430,14 @@
     </section>
 
     <footer>
-      <div class="siteNav">
-        <button> Home </button>
-        <button> About Me </button>
-        <button> Work </button>
-        <button> Skills </button>
-        <button> Resume </button>
+      <div class="footerbtnContainer">
+        <button type="button" class= "btn btn-light" class="footerBtn"><a href="#nav"> Home </a> </button>
+        <button type="button" class="btn btn-light" class="footerBtn"><a href="#profilePic"> About Me </a></button>
+        <button type="button" class="btn btn-light" class="footerBtn">  <a href="#workAside"> Work </a> </button>
+        <button type="button" class="btn btn-light" class="footerBtn"> <a href="#skillsAside"> Skills </a></button>
+        <button type="button" class="btn btn-light" class="footerBtn"> <a href="#resumeAside">Resume </a></button>
       </div>
+
       <div class="rights">
         <h3>All rights reserved &copy;</h3>
         <br>
