changed display to flex for tablets for all sections

--- a/index.html
+++ b/index.html
@@ -451,9 +451,9 @@
         <div class="row" id="footerCol"></div>
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
           <div class="rights">
-            <h3>All rights reserved &copy;</h3>
+            <h4>All rights reserved &copy;</h4>
             <br>
-            <h4> Designed by ADIL SECO &REG;</h4>
+            <h4> Designed by Adil  &REG;</h4>
           </div>
         </div>
       </div>  
