removed repetitive code in media queries

--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
                 <div class="card-body">
                   <figure>
                     <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank"></a>
-                </div>
 
-                <div class="card-footer">
-                  <figcaption id="projectcaption">
-                    <h5> CSS3 / Vanilla JS</h5>
-                  </figcaption>
+                    <div class="card-footer">
+                      <figcaption id="projectcaption">
+                        <h5> CSS3 / Vanilla JS</h5>
+                      </figcaption>
                   </figure>
                 </div>
               </div>
@@ -103,7 +102,7 @@
 
         <!--2nd row of grid/projects-->
         <div class="row" class="projects">
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+          <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class='card' class="projects">
               <div class="projectImage" id="project2">
                 <div class="card-title">
@@ -116,19 +115,19 @@
                       target="_blank">
                     </a>
                   </figure>
-                </div>
 
-                <div class="card-footer">
-                  <figcaption id="projectcaption">
-                    <h5> UX Prototype in Figma</h5>
-                    <h5>App Coming Soon! </h5>
-                  </figcaption>
+                  <div class="card-footer">
+                    <figcaption id="projectcaption">
+                      <h5> UX Prototype in Figma</h5>
+                      <h5>App Coming Soon! </h5>
+                    </figcaption>
+                  </div>
                 </div>
               </div>
             </div>
           </div><!--columns ends here-->
 
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+          <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class='card' class="projects">
               <div class="projectImage" id="project3">
                 <div class="card-title">
@@ -139,13 +138,13 @@
                   <figure>
 
                   </figure>
-                </div>
 
-                <div class="card-footer">
-                  <figcaption id="projectcaption">
-                    <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
-                    <h5>Coming Soon!</h5>
-                  </figcaption>
+                  <div class="card-footer">
+                    <figcaption id="projectcaption">
+                      <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
+                      <h5>Coming Soon!</h5>
+                    </figcaption>
+                  </div>
                 </div>
               </div>
             </div>
@@ -154,7 +153,7 @@
 
         <!--3rd row for projects/work-->
         <div class="row" class="projects">
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+          <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class="card" class="projects">
               <div class="projectImage" id="project4">
                 <div class="card-title">
@@ -176,7 +175,8 @@
             </div>
           </div>
 
-          <div class="col-xl-6 col-lg-6 col-md-6 col-sm12">
+          <!--2nd column-->
+          <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class="card" class="projects">
               <div class="projectImage" id="project5">
                 <div class="card-title">
@@ -187,18 +187,18 @@
                   <figure>
 
                   </figure>
-                </div>
 
-                <div class="card-footer">
-                  <figcaption id="projectcaption">
-                    <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
-                  </figcaption>
+
+                  <div class="card-footer">
+                    <figcaption id="projectcaption">
+                      <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
+                    </figcaption>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div> <!--3rd row of grid closes here-->
-        <!-- </div> projects grid class ends here -->
+          </div> <!--column ends here-->
+        </div> <!--3rd row of grid closes here--> <!--projects grid class ends here-->
       </article>
     </section>
 
@@ -436,27 +436,27 @@
             </div>
         </div>
         </article>
-      </div>  
-        <div class="row" id="footerCol"></div>
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
-          <div class="footerbtnContainer">
-            <button type="button" class="btn btn-light" class="footerBtn"><a href="#nav"> Home </a> </button>
-            <button type="button" class="btn btn-light" class="footerBtn"><a href="#profilePic"> About Me </a></button>
-            <button type="button" class="btn btn-light" class="footerBtn"> <a href="#workAside"> Work </a> </button>
-            <button type="button" class="btn btn-light" class="footerBtn"> <a href="#skillsAside"> Skills </a></button>
-            <button type="button" class="btn btn-light" class="footerBtn"> <a href="#resumeAside">Resume </a></button>
-          </div>
+      </div>
+      <div class="row" id="footerCol"></div>
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
+        <div class="footerbtnContainer">
+          <button type="button" class="btn btn-light" class="footerBtn"><a href="#nav"> Home </a> </button>
+          <button type="button" class="btn btn-light" class="footerBtn"><a href="#profilePic"> About Me </a></button>
+          <button type="button" class="btn btn-light" class="footerBtn"> <a href="#workAside"> Work </a> </button>
+          <button type="button" class="btn btn-light" class="footerBtn"> <a href="#skillsAside"> Skills </a></button>
+          <button type="button" class="btn btn-light" class="footerBtn"> <a href="#resumeAside">Resume </a></button>
         </div>
+      </div>
 
-        <div class="row" id="footerCol"></div>
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
-          <div class="rights">
-            <h4>All rights reserved &copy;</h4>
-            <br>
-            <h4> Designed by Adil  &REG;</h4>
-          </div>
+      <div class="row" id="footerCol"></div>
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
+        <div class="rights">
+          <h4>All rights reserved &copy;</h4>
+          <br>
+          <h4> Designed by Adil &REG;</h4>
         </div>
-      </div>  
+      </div>
+      </div>
       </div> <!--row ends here-->
     </footer>
   </main>
