--- a/index.html
+++ b/index.html
@@ -361,8 +361,14 @@
           outcome
           I possess a drive which enables me to work independently
           I am a quick learner. I have been awarded in the Top 5 learners in the UK & Ireland for my organization out of
-          30.000 employees. </h3>
+          30.000 employees. 
+        </h3>  
+
       </article>
+
+      <!-- <div class="getInTouchBtn"> -->
+        <button type="button" class="btn btn-light contactMeBtn" class="footerBtn"><a href="#articleContactMe"> Get in Touch </a> </button>
+      <!-- </div> -->
       <!-- </section> -->
 
       <!-- contact me -->
@@ -440,11 +446,11 @@
       <div class="row" id="footerCol"></div>
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
         <div class="footerbtnContainer">
-          <button type="button" class="btn btn-light" class="footerBtn"><a href="#nav"> Home </a> </button>
-          <button type="button" class="btn btn-light" class="footerBtn"><a href="#profilePic"> About Me </a></button>
-          <button type="button" class="btn btn-light" class="footerBtn"> <a href="#workAside"> Work </a> </button>
-          <button type="button" class="btn btn-light" class="footerBtn"> <a href="#skillsAside"> Skills </a></button>
-          <button type="button" class="btn btn-light" class="footerBtn"> <a href="#resumeAside">Resume </a></button>
+          <button type="button" class="btn btn-light footerBtn"><a href="#nav"> Home </a> </button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#profilePic"> About Me </a></button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#workAside"> Work </a> </button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#skillsAside"> Skills </a></button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#resumeAside">Resume </a></button>
         </div>
       </div>
 
