changed buttons to transparent and added cool hover effect

--- a/index.html
+++ b/index.html
@@ -394,7 +394,13 @@
     </section>
 
     <footer>
-      <div class="row" id="footerCol">
+      <div class="row" >
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm12" id="contactLabel">
+          <h3>Contact Me</h3>
+        </div>
+      </div>
+      
+      <div class="row" id="">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
           <article class="articleContactMe">
             <div id="call">
@@ -413,7 +419,7 @@
                 <figure class="contactIcons">
                   <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
                   <figcaption class="contactCaption">
-                    <h5> email</h5>
+                    <h5> Email</h5>
                   </figcaption>
                 </figure>
               </a>
