fixed grid layout for work and added gradient transparent overlay for images of projects

--- a/index.html
+++ b/index.html
@@ -80,20 +80,22 @@
         <div class="row" class="projects">
           <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
             <div class='card'>
-              <div class="projectImage" id="project1">
-                <div class="card-title">
-                  <h2 class="title-bg">Password Generator</h2>
-                </div>
+              <div id="project1">
+                <div id="transparent">
+                  <div class="card-title">
+                    <h2 class="title-bg">Password Generator</h2>
+                  </div>
 
-                <div class="card-body">
-                  <figure>
-                    <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank"></a>
+                  <div class="card-body">
+                    <figure>
+                      <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank"></a>
 
-                    <div class="card-footer">
-                      <figcaption id="projectcaption">
-                        <h5> CSS3 / Vanilla JS</h5>
-                      </figcaption>
-                  </figure>
+                      <div class="card-footer">
+                        <figcaption id="projectcaption">
+                          <h5> CSS3 / Vanilla JS</h5>
+                        </figcaption>
+                    </figure>
+                  </div>
                 </div>
               </div>
             </div>
@@ -103,24 +105,26 @@
         <!--2nd row of grid/projects-->
         <div class="row" class="projects">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
-            <div class='card' class="projects">
-              <div class="projectImage" id="project2">
-                <div class="card-title">
-                  <h2 class="title-bg"> STUDEAT - Food for Students</h2>
-                </div>
+            <div class='card'>
+              <div id="project2">
+                <div id="transparent">
+                  <div class="card-title">
+                    <h2 class="title-bg"> STUDEAT - Food for Students</h2>
+                  </div>
 
-                <div class="card-body">
-                  <figure>
-                    <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1"
-                      target="_blank">
-                    </a>
-                  </figure>
+                  <div class="card-body">
+                    <figure>
+                      <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1"
+                        target="_blank">
+                      </a>
+                    </figure>
 
-                  <div class="card-footer">
-                    <figcaption id="projectcaption">
-                      <h5> UX Prototype in Figma</h5>
-                      <h5>App Coming Soon! </h5>
-                    </figcaption>
+                    <div class="card-footer">
+                      <figcaption id="projectcaption">
+                        <h5> UX Prototype in Figma</h5>
+                        <h5>App Coming Soon! </h5>
+                      </figcaption>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -129,21 +133,23 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class='card' class="projects">
-              <div class="projectImage" id="project3">
-                <div class="card-title">
-                  <h2 class="title-bg"> Flight Booking Site</h2>
-                </div>
+              <div id="project3">
+                <div id="transparent">
+                  <div class="card-title">
+                    <h2 class="title-bg"> Flight Booking Site</h2>
+                  </div>
 
-                <div class="card-body">
-                  <figure>
+                  <div class="card-body">
+                    <figure>
 
-                  </figure>
+                    </figure>
 
-                  <div class="card-footer">
-                    <figcaption id="projectcaption">
-                      <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
-                      <h5>Coming Soon!</h5>
-                    </figcaption>
+                    <div class="card-footer">
+                      <figcaption id="projectcaption">
+                        <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
+                        <h5>Coming Soon!</h5>
+                      </figcaption>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -155,21 +161,23 @@
         <div class="row" class="projects">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class="card" class="projects">
-              <div class="projectImage" id="project4">
-                <div class="card-title">
-                  <h2 class="title-bg"> E-Commerce Site</h2>
-                </div>
+              <div id="project4">
+                <div id="transparent">
+                  <div class="card-title">
+                    <h2 class="title-bg"> E-Commerce Site</h2>
+                  </div>
 
-                <div class="card-body">
-                  <figure>
-                  </figure>
-                </div>
+                  <div class="card-body">
+                    <figure>
+                    </figure>
+                  </div>
 
-                <div class="card-footer">
-                  <figcaption id="projectcaption">
-                    <h5> FIGMA / WORDPRESS / WOOCOMMERCE </h5>
-                    <h5>Coming Soon!</h5>
-                  </figcaption>
+                  <div class="card-footer">
+                    <figcaption id="projectcaption">
+                      <h5> FIGMA / WORDPRESS / WOOCOMMERCE </h5>
+                      <h5>Coming Soon!</h5>
+                    </figcaption>
+                  </div>
                 </div>
               </div>
             </div>
@@ -178,21 +186,23 @@
           <!--2nd column-->
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class="card" class="projects">
-              <div class="projectImage" id="project5">
-                <div class="card-title">
-                  <h2 class="title-bg"> Bus Booking Website </h2>
-                </div>
+              <div id="project5">
+                <div id="transparent">
+                  <div class="card-title">
+                    <h2 class="title-bg"> Bus Booking Website </h2>
+                  </div>
 
-                <div class="card-body">
-                  <figure>
+                  <div class="card-body">
+                    <figure>
 
-                  </figure>
+                    </figure>
 
 
-                  <div class="card-footer">
-                    <figcaption id="projectcaption">
-                      <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
-                    </figcaption>
+                    <div class="card-footer">
+                      <figcaption id="projectcaption">
+                        <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
+                      </figcaption>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -256,7 +266,7 @@
         </div> <!--1st row skillsRow of skills end here-->
 
         <div class="row skillsRow">
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-">
             <div id="skill5">
               <figure class="skillsIcons">
                 <i class="fa-brands fa-html5 fa-4x"></i>
@@ -267,7 +277,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-">
             <div id="skill6">
               <figure class="skillsIcons">
                 <i class="fa-brands fa-css3-alt fa-4x"></i>
@@ -278,7 +288,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm--">
             <div id="skill7">
               <figure class="skillsIcons">
                 <i class="fa-brands fa-bootstrap fa-4x"></i>
@@ -289,7 +299,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-">
             <div id="skill8">
               <figure class="skillsIcons">
                 <i class="fa-brands fa-wordpress fa-4x"></i>
@@ -302,7 +312,7 @@
         </div>
 
         <div class="row skillsRow">
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-">
             <div id="skill9">
               <figure class="skillsIcons">
                 <i class="fab fa-js fa-4x"></i>
@@ -313,7 +323,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-">
             <div id="skill10">
               <figure class="skillsIcons">
                 <i class="fa-brands fa-react fa-4x"></i>
@@ -324,7 +334,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-">
             <div id="skill11">
               <figure class="skillsIcons">
                 <i class="fa fa-terminal fa-4x"></i>
@@ -335,7 +345,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm12">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-">
             <div id="skill12">
               <figure class="skillsIcons">
                 <i class="fa-brands fa-aws fa-4x"></i>
@@ -361,13 +371,13 @@
           outcome
           I possess a drive which enables me to work independently
           I am a quick learner. I have been awarded in the Top 5 learners in the UK & Ireland for my organization out of
-          30.000 employees. 
-        </h3>  
+          30.000 employees.
+        </h3>
 
       </article>
 
       <!-- <div class="getInTouchBtn"> -->
-        <button type="button" class="btn btn-light contactMeBtn" class="footerBtn"><a href="#articleContactMe"> Get in Touch </a> </button>
+      <button type="button" class="btn btn-light contactMeBtn"><a href="#articleContactMe"> Get in Touch </a> </button>
       <!-- </div> -->
       <!-- </section> -->
 
@@ -394,17 +404,17 @@
     </section>
 
     <footer>
-      <div class="row" >
+      <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm12" id="contactLabel">
           <h3>Contact Me</h3>
         </div>
       </div>
-      
+
       <div class="row" id="">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
           <article class="articleContactMe">
             <div id="call">
-              <a href="tel:+447765401734">
+              <a href="tel:+44 7765401734">
                 <figure class="contactIcons">
                   <i class="fa fa-phone fa-2x" aria-hidden="true"></i>
                   <figcaption class="contactCaption">
